feat: 이미지 기반 A/B 테스트 시스템 완성 및 시뮬레이터 개선
- 이미지 URL 지원 추가 (baseline_image_url, challenger_image_url)
- 시뮬레이터에서 실제 이미지 표시 기능 구현
- 프론트엔드 네비게이션 개선 (URL 파라미터 기반 섹션 전환)
- 실시간 데이터 동기화 (postMessage API)
- Variant 통계 업데이트 로직 수정
- ABTestResponse 스키마에 이미지 필드 추가
- 데이터베이스 스키마 동기화 문제 해결
- 시뮬레이터 이미지 정보 표시 섹션 추가

주요 변경사항:
- src/schemas.py: ABTestResponse에 이미지 URL 필드 추가
- src/app.py: 상호작용 시 Variant 통계 직접 업데이트
- test/simple_test_simulator.js: 실제 이미지 로드 및 표시
- test/dashboard.js: URL 파라미터 기반 섹션 관리
- test/simple_test_simulator.html: 이미지 정보 표시 섹션 추가

--- a/test/dashboard.html
+++ b/test/dashboard.html
@@ -12,22 +12,73 @@
         <header>
             <h1>🤖 AI 기반 A/B 테스트 자동화 플랫폼</h1>
             <p>실시간 테스트 현황 및 성과 분석</p>
+            <div class="navigation-buttons">
+                <button onclick="showAllSections()" class="nav-btn">🏠 전체 보기</button>
+                <button onclick="showCreateTestSection()" class="nav-btn">🆕 새 테스트</button>
+                <button onclick="showAnalysisSection()" class="nav-btn">🧠 AI 분석</button>
+                <button onclick="showHistorySection()" class="nav-btn">📈 히스토리</button>
+                <button onclick="window.open('simple_test_simulator.html', '_blank')" class="nav-btn">🎮 시뮬레이터</button>
+                <button onclick="manualRefresh()" class="nav-btn" style="background: #667eea; color: white;">🔄 새로고침</button>
+            </div>
         </header>
 
         <div class="dashboard-grid">
-            <!-- 테스트 생성 섹션 -->
+            <!-- 이미지 기반 A/B 테스트 생성 섹션 -->
             <div class="card">
-                <h2>🆕 새 테스트 생성</h2>
-                <form id="createTestForm">
+                <h2>🆕 이미지 기반 A/B 테스트 생성</h2>
+                <form id="createImageTestForm">
                     <div class="form-group">
-                        <label for="productName">상품명:</label>
-                        <input type="text" id="productName" name="productName" placeholder="테스트할 상품명을 입력하세요" required>
+                        <label for="testName">테스트 이름:</label>
+                        <input type="text" id="testName" name="testName" placeholder="테스트 이름을 입력하세요" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="productId">상품 ID:</label>
+                        <input type="text" id="productId" name="productId" placeholder="PROD_001" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="baselineImageUrl">A안 이미지 URL:</label>
+                        <input type="url" id="baselineImageUrl" name="baselineImageUrl" placeholder="https://example.com/a-image.jpg" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="challengerImageUrl">B안 이미지 URL:</label>
+                        <input type="url" id="challengerImageUrl" name="challengerImageUrl" placeholder="https://example.com/b-image.jpg" required>
                     </div>
                     <div class="form-group">
                         <label for="testDuration">테스트 기간 (일):</label>
                         <input type="number" id="testDuration" name="testDuration" value="7" min="1" max="30">
                     </div>
-                    <button type="submit" class="btn-primary">테스트 시작</button>
+                    <div class="form-group">
+                        <label for="minSampleSize">최소 샘플 크기:</label>
+                        <input type="number" id="minSampleSize" name="minSampleSize" value="100" min="10" max="10000">
+                    </div>
+                    <button type="submit" class="btn-primary">A/B 테스트 시작</button>
+                </form>
+            </div>
+
+            <!-- 승자 선택 섹션 -->
+            <div class="card" id="winnerSelectionCard" style="display: none;">
+                <h2>🏆 승자 선택</h2>
+                <div id="winnerSelectionContent">
+                    <div class="winner-info">
+                        <h3>AI 승자 결정 완료!</h3>
+                        <p id="aiWinnerInfo">AI가 승자를 결정했습니다. 아래에서 최종 승자를 선택하세요.</p>
+                    </div>
+                    <div class="winner-buttons">
+                        <button id="selectBaselineWinner" class="btn-winner" onclick="selectWinner('baseline')">A안 선택</button>
+                        <button id="selectChallengerWinner" class="btn-winner" onclick="selectWinner('challenger')">B안 선택</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 다음 사이클 생성 섹션 -->
+            <div class="card" id="nextCycleCard" style="display: none;">
+                <h2>🔄 다음 테스트 사이클 생성</h2>
+                <form id="nextCycleForm">
+                    <div class="form-group">
+                        <label for="newChallengerImageUrl">새로운 B안 이미지 URL:</label>
+                        <input type="url" id="newChallengerImageUrl" name="newChallengerImageUrl" placeholder="https://example.com/new-b-image.jpg" required>
+                    </div>
+                    <button type="submit" class="btn-primary">다음 사이클 시작</button>
                 </form>
             </div>
 
@@ -42,6 +93,14 @@
                 </div>
                 <div id="currentTests">
                     <p>테스트 데이터를 불러오는 중...</p>
+                </div>
+            </div>
+
+            <!-- AI 분석 결과 -->
+            <div class="card">
+                <h2>🧠 AI 분석 결과</h2>
+                <div id="aiAnalysis">
+                    <p>AI 분석 데이터를 불러오는 중...</p>
                 </div>
             </div>
 
