feat: AB테스트 시뮬레이션 프론트엔드 수정
- 프론트엔드 수정
- 다양한 제품군의 AB테스트 6개 생성 (전자제품, 패션, 뷰티, 테크, 헬스케어)
- 자동 샘플 데이터 생성 스크립트 추가

--- a/test/dashboard.html
+++ b/test/dashboard.html
@@ -18,7 +18,7 @@
                 <button onclick="showAnalysisSection()" class="nav-btn">🧠 AI 분석</button>
                 <button onclick="showHistorySection()" class="nav-btn">📈 히스토리</button>
                 <button onclick="window.open('simple_test_simulator.html', '_blank')" class="nav-btn">🎮 시뮬레이터</button>
-                <button onclick="manualRefresh()" class="nav-btn" style="background: #667eea; color: white;">🔄 새로고침</button>
+                <button onclick="manualRefresh()" class="nav-btn" style="background: #7D6AE7; color: white;">🔄 새로고침</button>
             </div>
         </header>
 
@@ -87,7 +87,7 @@
                 <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px;">
                     <h2>📊 현재 테스트 현황</h2>
                     <button onclick="cleanupOldTests()" 
-                            style="background: #f56565; color: white; border: none; padding: 8px 12px; border-radius: 6px; font-size: 0.9rem; cursor: pointer;">
+                            style="background: #e53e3e; color: white; border: none; padding: 8px 12px; border-radius: 6px; font-size: 0.9rem; cursor: pointer; transition: all 0.3s ease;">
                         오래된 테스트 정리
                     </button>
                 </div>
