feat: 새로운 AB 테스트 지표 체계 구현
- 핵심 지표: CVR(상세페이지→구매), CVR(클릭→구매), 장바구니 추가율, 세션 지속시간
- 가드레일 지표: 이탈률, 페이지 로드시간, 오류 발생률
- 노출 수 제거하고 상세페이지 방문 기준으로 지표 체계 변경
- 데이터 모델에 새로운 필드들 추가 (unique_detail_viewers, add_to_carts 등)
- 백엔드 API 전면 업데이트 (analytics, ai-analysis, performance 등)
- 프론트엔드 대시보드와 시뮬레이터를 새로운 지표에 맞게 수정
- AI 가중치 계산 로직을 새로운 지표 체계에 맞게 변경

--- a/test/dashboard.html
+++ b/test/dashboard.html
@@ -106,7 +106,7 @@
 
             <!-- 성과 지표 -->
             <div class="card">
-                <h2>📈 성과 지표</h2>
+                <h2>📈 새로운 지표 체계</h2>
                 <div class="metrics-grid">
                     <div class="metric">
                         <span class="metric-value" id="totalTests">0</span>
@@ -117,19 +117,27 @@
                         <span class="metric-label">활성 테스트</span>
                     </div>
                     <div class="metric">
-                        <span class="metric-value" id="totalInteractions">0</span>
-                        <span class="metric-label">총 상호작용</span>
+                        <span class="metric-value" id="totalDetailViewers">0</span>
+                        <span class="metric-label">총 상세 조회자</span>
                     </div>
                     <div class="metric">
                         <span class="metric-value" id="conversionRate">0%</span>
-                        <span class="metric-label">전환율</span>
+                        <span class="metric-label">핵심 CVR (상세→구매)</span>
+                    </div>
+                    <div class="metric">
+                        <span class="metric-value" id="cartAddRate">0%</span>
+                        <span class="metric-label">장바구니 추가율</span>
+                    </div>
+                    <div class="metric">
+                        <span class="metric-value" id="totalRevenue">0원</span>
+                        <span class="metric-label">총 매출</span>
                     </div>
                 </div>
             </div>
 
             <!-- 차트 섹션 -->
             <div class="card full-width">
-                <h2>📊 성과 비교 차트</h2>
+                <h2>📊 새로운 지표 성과 비교 차트</h2>
                 <div class="chart-container" style="height: 400px !important; max-height: 400px !important; overflow: hidden;">
                     <canvas id="performanceChart" style="height: 400px !important; max-height: 400px !important;"></canvas>
                 </div>
