--- a/test/dashboard.html
+++ b/test/dashboard.html
@@ -52,7 +52,7 @@
                 <button onclick="showAnalysisSection()" class="nav-btn">🧠 AI 분석</button>
                 <button onclick="showHistorySection()" class="nav-btn">📈 히스토리</button>
                 <button onclick="window.open('simple_test_simulator.html', '_blank')" class="nav-btn">🎮 시뮬레이터</button>
-                <button onclick="manualRefresh()" class="nav-btn" style="background: hsl(var(--primary)); color: hsl(var(--primary-foreground));">🔄 새로고침</button>
+                <button onclick="manualRefresh()" class="nav-btn active">🔄 새로고침</button>
             </div>
         </header>
 
@@ -120,8 +120,7 @@
             <div class="card">
                 <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px;">
                     <h2>📊 현재 테스트 현황</h2>
-                    <button onclick="cleanupOldTests()" 
-                            style="background: #e53e3e; color: white; border: none; padding: 8px 12px; border-radius: 6px; font-size: 0.9rem; cursor: pointer; transition: all 0.3s ease;">
+                    <button onclick="cleanupOldTests()" class="btn" style="background: hsl(var(--destructive)); color: hsl(var(--destructive-foreground)); font-size: 0.9rem;">
                         오래된 테스트 정리
                     </button>
                 </div>
