--- a/test/dashboard.html
+++ b/test/dashboard.html
@@ -36,6 +36,10 @@
                         <input type="text" id="productId" name="productId" placeholder="PROD_001" required>
                     </div>
                     <div class="form-group">
+                        <label for="productPrice">상품 가격 (₩):</label>
+                        <input type="number" id="productPrice" name="productPrice" placeholder="1200000" min="1" required>
+                    </div>
+                    <div class="form-group">
                         <label for="baselineImageUrl">A안 이미지 URL:</label>
                         <input type="url" id="baselineImageUrl" name="baselineImageUrl" placeholder="https://example.com/a-image.jpg" required>
                     </div>
@@ -104,9 +108,9 @@
                 </div>
             </div>
 
-            <!-- 성과 지표 -->
+            <!-- 성과 지표 (새로운 지표 체계) -->
             <div class="card">
-                <h2>📈 성과 지표</h2>
+                <h2>📈 핵심 성과 지표</h2>
                 <div class="metrics-grid">
                     <div class="metric">
                         <span class="metric-value" id="totalTests">0</span>
@@ -117,12 +121,30 @@
                         <span class="metric-label">활성 테스트</span>
                     </div>
                     <div class="metric">
-                        <span class="metric-value" id="totalInteractions">0</span>
-                        <span class="metric-label">총 상호작용</span>
+                        <span class="metric-value" id="totalClicks">0</span>
+                        <span class="metric-label">총 클릭</span>
                     </div>
                     <div class="metric">
-                        <span class="metric-value" id="conversionRate">0%</span>
-                        <span class="metric-label">전환율</span>
+                        <span class="metric-value" id="avgCvr">0%</span>
+                        <span class="metric-label">평균 CVR</span>
+                    </div>
+                </div>
+                <div class="metrics-grid" style="margin-top: 20px;">
+                    <div class="metric">
+                        <span class="metric-value" id="totalCartAdditions">0</span>
+                        <span class="metric-label">총 장바구니</span>
+                    </div>
+                    <div class="metric">
+                        <span class="metric-value" id="totalPurchases">0</span>
+                        <span class="metric-label">총 구매</span>
+                    </div>
+                    <div class="metric">
+                        <span class="metric-value" id="avgCartAddRate">0%</span>
+                        <span class="metric-label">평균 장바구니율</span>
+                    </div>
+                    <div class="metric">
+                        <span class="metric-value" id="totalRevenue">₩0</span>
+                        <span class="metric-label">총 매출</span>
                     </div>
                 </div>
             </div>
