--- a/test/simple_test_simulator.html
+++ b/test/simple_test_simulator.html
@@ -472,22 +472,39 @@
                     <span class="stat-label">버전 B 구매</span>
                 </div>
             </div>
-            <div class="stats-grid">
-                <div class="stat-item">
-                    <span class="stat-value" id="conversionA">0%</span>
-                    <span class="stat-label">버전 A 전환율</span>
+
+            <!-- 시뮬레이션 확률 설정 -->
+            <div style="background: #e6fffa; border: 1px solid #81e6d9; border-radius: 6px; padding: 15px; margin-top: 15px;">
+                <h4 style="margin: 0 0 10px 0; color: #2c7a7b;">⚡ 자동 시뮬레이션 확률 설정</h4>
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; font-size: 0.9rem;">
+                    <div style="background: white; border-radius: 4px; padding: 10px;">
+                        <strong style="color: #2d3748;">📄 페이지 로드</strong>
+                        <div style="color: #4a5568; margin-top: 5px;">100% (모든 방문자)</div>
+                    </div>
+                    <div style="background: white; border-radius: 4px; padding: 10px;">
+                        <strong style="color: #667eea;">🔵 클릭</strong>
+                        <div style="color: #4a5568; margin-top: 5px;">70% (페이지 로드 후)</div>
+                    </div>
+                    <div style="background: white; border-radius: 4px; padding: 10px;">
+                        <strong style="color: #ed8936;">🟠 장바구니 추가</strong>
+                        <div style="color: #4a5568; margin-top: 5px;">30% (클릭 후)</div>
+                    </div>
+                    <div style="background: white; border-radius: 4px; padding: 10px;">
+                        <strong style="color: #38a169;">🛒 장바구니 구매</strong>
+                        <div style="color: #4a5568; margin-top: 5px;">40% (장바구니 추가 후)</div>
+                    </div>
+                    <div style="background: white; border-radius: 4px; padding: 10px;">
+                        <strong style="color: #38a169;">💳 직접 구매</strong>
+                        <div style="color: #4a5568; margin-top: 5px;">15% (클릭 후)</div>
+                    </div>
+                    <div style="background: white; border-radius: 4px; padding: 10px;">
+                        <strong style="color: #e53e3e;">🔴 오류</strong>
+                        <div style="color: #4a5568; margin-top: 5px;">2% (랜덤)</div>
+                    </div>
                 </div>
-                <div class="stat-item">
-                    <span class="stat-value" id="conversionB">0%</span>
-                    <span class="stat-label">버전 B 전환율</span>
-                </div>
-                <div class="stat-item">
-                    <span class="stat-value" id="improvement">0%</span>
-                    <span class="stat-label">개선율</span>
-                </div>
-                <div class="stat-item">
-                    <span class="stat-value" id="significance">-</span>
-                    <span class="stat-label">통계적 유의성</span>
+                <div style="margin-top: 10px; padding: 8px; background: #f0f8ff; border-radius: 4px; font-size: 0.85rem; color: #4a5568;">
+                    💡 <strong>실제 방문자 플로우 시뮬레이션:</strong> 
+                    페이지 로드 → 클릭(70%) → [장바구니 추가(30%) → 장바구니 구매(40%)] 또는 [직접 구매(15%)] + 오류(2%)
                 </div>
             </div>
         </div>
